<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cardDetails"
            type="com.onats.cardinfofinder.framework.ui.states.CardInformationViewStates" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/details_bg"
        tools:context=".framework.MainActivity">

        <TextView
            android:id="@+id/user_prompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/user_prompt"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numberInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/user_prompt">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/numberInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/four_corner_curved_bg"
                android:backgroundTint="@color/bg_search"
                android:inputType="number"
                android:paddingStart="16dp"
                android:paddingLeft="24dp"
                android:paddingEnd="16dp"
                android:paddingRight="0dp"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <androidx.cardview.widget.CardView
            android:id="@+id/card_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:visibility="invisible"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/card_information"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cardBrandKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_brand"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/cardTypeKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/card_type"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardBrandKey" />

                <TextView
                    android:id="@+id/cardBankKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/bank"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardTypeKey" />

                <TextView
                    android:id="@+id/countryKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/country"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardBankKey" />

                <TextView
                    android:id="@+id/cardBrandValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{cardDetails.cardBrand}"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/cardTypeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{cardDetails.cardType}"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/cardBrandValue" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="94dp" />

                <TextView
                    android:id="@+id/bankValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{cardDetails.bank.name}"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/cardTypeValue" />

                <TextView
                    android:id="@+id/countryValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{cardDetails.country.name}"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/bankValue" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="24dp"
            android:text="Search"
            app:layout_constraintTop_toBottomOf="@id/numberInputLayout"
            app:layout_constraintRight_toRightOf="parent"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Material.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:indeterminate="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>